[gd_scene load_steps=5 format=2]

[ext_resource path="res://LevelDefaults/GamePlay/MinimalTiles.gd" type="Script" id=1]
[ext_resource path="res://LevelDefaults/Cubes/CubeMeshTextD.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://LevelDefaults/ResetArea/ResetGround.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]

[node name="MinimalTiles" type="Spatial"]
script = ExtResource( 1 )

[node name="ModifiableTiles" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
collision_layer = 513
collision_mask = 513
data = {
"cells": PoolIntArray( 3, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 2, 0, 1, 3, 0, 0, 65526, 0, 65535, 65526, 0, 0, 65527, 0, 65535, 65527, 0, 131072, 65530, 0, 196607, 65530, 0, 65536, 65531, 0, 131071, 65531, 0, 0, 65532, 0, 65535, 65533, 0, 3, 65535, 0, 65532, 65535, 0, 65533, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="StaticTiles" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
collision_layer = 513
collision_mask = 513
data = {
"cells": PoolIntArray( 0, 0, 0, 65535, 0, 0, 0, 65524, 1, 0, 65530, 0, 65535, 65530, 0, 65536, 65530, 0, 131071, 65530, 0, 0, 65531, 0, 65535, 65531, 0, 0, 65535, 0, 65535, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="ResetGround" parent="." instance=ExtResource( 3 )]
transform = Transform( 300, 0, 0, 0, 1, 0, 0, 0, 300, 0, -2, 0 )

[node name="Areas" type="Spatial" parent="."]

[node name="Endpoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3, -23 )

[node name="Endpoint" type="Area" parent="Endpoint"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Endpoint/Endpoint"]
transform = Transform( 0.8, 0, 0, 0, 0.3, 0, 0, 0, 0.8, 0, -0.7, 0 )
shape = SubResource( 1 )
[connection signal="body_entered" from="Endpoint/Endpoint" to="." method="_levelFinished"]
